Finish resume 2022 fr

--- a/CV2022_POIRRIER_Alexandre_FR.tex
+++ b/CV2022_POIRRIER_Alexandre_FR.tex
@@ -61,50 +61,45 @@
 %----------------------------------------------------------------------------------------
 %	 EXPERIENCE
 %----------------------------------------------------------------------------------------
-~\\[0.15cm]
 \section{Expérience professionnelle}
 
 \begin{twenty}
-	\twentyitem{Juil. 2021 - }{\textbf{Doctorant}, \'Ecole polytechnique}{France}{Sécurité formelle des réseaux zéro-confiance}
-	\twentyitem{Avril 2019 -\\Août 2019}{\textbf{Chercheur (stage)}, Cisco Systems}{France}{Étude et optimisation de VPP, une stack réseau virtuelle écrite pour hardware non spécifiques.}
-	\twentyitem{Juin 2018 -\\ Août 2018}{\textbf{Stagiaire Data scientist} chez BeeBryte}{Singapour}{Conception d'un algorithme de trading pour optimiser la consommation énergétique de bâtiments commerciaux. \\ Apprentissage par renforcement de réseaux de neurones profonds pour optimiser l'algorithme.}
-	\twentyitem{Oct. 2017 -\\ Mai 2018}{\textbf{Colleur} en classes préparatoires}{Sceaux, France}{Interrogations orales pour préparer des élèves de PSI* au concours d'entrée aux grandes écoles.}
-	\twentyitem{Sep. 2016 -\\ Mars 2017}{\textbf{Stagiaire ingénieur} au CMRRF de Kerpape}{Ploemeur, France}{Animation d'un Fablab : apprentissage de la modélisation 3D à des patients handicapés moteurs, pour les aider à créer des aides techniques qui les aident à retrouver une certaine autonomie au quotidien. \\ Expérience immersive in dans un centre de rééductation au contact de personnes en situation de handicap et du personnel soignant.}
+	\twentyitem{Juil. 2021}{Présent}{\textbf{Doctorant}, \'Ecole polytechnique}{Palaiseau}{France}{Sécurité formelle des réseaux zéro-confiance.}
+	\twentyitem{Avril 2019}{Août 2019}{\textbf{Chercheur stagiaire}, Cisco Systems}{Issy}{France}{Étude et optimisation de VPP, une stack réseau virtuelle écrite pour hardware non spécifiques.}
+	\twentyitem{Juin 2018}{Août 2018}{\textbf{Stagiaire Data scientist}, BeeBryte}{Singapour}{}{Conception d'un algorithme de trading pour optimiser la consommation énergétique de bâtiments commerciaux.\\ Apprentissage par renforcement de réseaux de neurones profonds pour optimiser l'algorithme.}
+	\twentyitem{Oct. 2017}{Mai 2018}{\textbf{Colleur} en classes préparatoires}{Sceaux}{France}{Interrogations orales pour préparer des élèves de PSI* au concours d'entrée aux grandes écoles.}
+	\twentyitem{Sep. 2016}{Mars 2017}{\textbf{Stagiaire ingénieur} au CMRRF de Kerpape}{Ploemeur}{France}{Animation d'un Fablab : apprentissage de la modélisation 3D à des patients handicapés moteurs, pour les aider à créer des aides techniques qui les aident à retrouver une certaine autonomie au quotidien.}
 	%\twentyitem{<dates>}{<title>}{<location>}{<description>}
 \end{twenty}
 
 %----------------------------------------------------------------------------------------
-~\\[0.2cm]
 \section{Formation}
 
 \begin{twenty} % Environment for a list with descriptions
-	\twentyitem{2016-2019}{École polytechnique}{Palaiseau, France}{GPA : 3.92, Classement corps provisoire : $44^e$ \\ Parcours d'approfondissement en cybersecurité\\ Cours : Cryptographie, IoT, Architechture des réseaux et des ordinateurs, Sécurité des réseaux, Hacking \\ Projets :  \\ - Implementation d'attaques sur réseaux (TCP Syn Flood, DNS and DHCP Spoofing, Overflow Exploit, ...). \\ - Load balancing indépendant des serveurs grâce aux Top of Racks et au Segment Routing.}
-	\twentyitem{2013-2016}{Classes préparatoires Lycée Henri IV}{Paris, France}{MPSI/MP*, Option informatique}
-	\twentyitem{2013}{Baccalauréat général}{Paris, France}{Lycée Henri IV, Série S, mention bien}
+	\twentyitem{2019}{2021}{Master en informatique à ETH Zürich}{Zürich}{Suisse}{Mineure cybersécurité. GPA: 5.69/6.\\ Master thesis dans le groupe de Cryptographie Appliquée `Continuous authentication in Secure Messaging'.}
+	\twentyitem{2016}{2019}{Diplôme d'ingénieur à l'École polytechnique}{Palaiseau}{France}{GPA : 3.92/4, Classement : $44^e$. Mineure cybersécurité.}
+	\twentyitem{2013}{2016}{Classes préparatoires Lycée Henri IV}{Paris}{France}{MPSI/MP*, Option informatique}
 \end{twenty}
 
 
 %----------------------------------------------------------------------------------------
 %	 AWARDS
 %----------------------------------------------------------------------------------------
-~\\[0.2cm]
-\section{Prix et distinctions}
+\section{Prix et publications}
 
-\begin{twenty} % Environment for a short list with no descriptions
-	\twentyitem{2018}{Vainqueur de la finale française de la Microsoft Imagine Cup}{France}{L'Imagine Cup est une compétition étudiante qui récompense les projets les plus innovants. \\ Mon équipe a présenté une application web pour aider les personnes sourdes, malentendantes et les étrangers à accéder plus facilement à du contenu culturel grâce à la réalité augmentée. \\ Un brevet sur l'algorithme principal est en cours de dépôt.}
-\end{twenty}
-
+\begin{twentyshort}
+	\twentyitemshort{Preprint}{Continuous Authentication in Secure Messaging. Soumis à IEEE S\&P 2022.}
+	\twentyitemshort{Prix}{Vainqueur de l'Imagine Cup France 2018. \\ L'Imagine Cup est une compétition étudiante qui récompense les projets les plus innovants. Mon équipe a présenté une application web pour aider les personnes sourdes, malentendantes et les étrangers à accéder plus facilement à du contenu culturel grâce à la réalité augmentée.}
+\end{twentyshort}
 
 
 %----------------------------------------------------------------------------------------
 %	 OTHER INFORMATION
 %----------------------------------------------------------------------------------------
-~\\[0.1cm]
 \section{Intérêts}
 
 \begin{twentyshort} % Environment for a short list with no descriptions
-	\twentyitemshort{Sport}{Escrime, compétitions étudiantes}
-	\twentyitemshort{Associations}{Trésorier de l'association (binet) escrime artistique \\ Président du binet magie}
+	\twentyitemshort{CTF}{Les Capture The Flag (CTF) sont des compétitions de hacking.\\Régulièrement top 50 compétitions mondiales, $10^e$ au challenge Brigitte Friang de la DGSE, $5^e$ au challenge DGHack 2021 de la DGA.}
 \end{twentyshort}
 
 \end{document} 
