--- a/CVFR_POIRRIER_Alexandre.tex
+++ b/CVFR_POIRRIER_Alexandre.tex
@@ -88,8 +88,8 @@
 \section{Prix et publications}
 
 \begin{twentyshort}
-	\twentyitemshort{Preprint}{Continuous Authentication in Secure Messaging. Soumis à IEEE S\&P 2022.}
-	\twentyitemshort{Prix}{Vainqueur de l'Imagine Cup France 2018. \\ L'Imagine Cup est une compétition étudiante qui récompense les projets les plus innovants. Mon équipe a présenté une application web pour aider les personnes sourdes, malentendantes et les étrangers à accéder plus facilement à du contenu culturel grâce à la réalité augmentée.}
+	\twentyitemshort{Preprint}{Continuous Authentication in Secure Messaging. Soumission en cours de révision à IEEE S\&P 2022.}
+	\twentyitemshort{Prix}{Vainqueur de l'Imagine Cup France 2018. \\ Application web pour aider les personnes sourdes, malentendantes et les étrangers à accéder plus facilement à du contenu culturel grâce à la réalité augmentée.}
 \end{twentyshort}
 
 
@@ -99,7 +99,7 @@
 \section{Intérêts}
 
 \begin{twentyshort} % Environment for a short list with no descriptions
-	\twentyitemshort{CTF}{Les Capture The Flag (CTF) sont des compétitions de hacking.\\Régulièrement top 50 compétitions mondiales, $10^e$ au challenge Brigitte Friang de la DGSE, $5^e$ au challenge DGHack 2021 de la DGA.}
+	\twentyitemshort{CTF}{Les Capture The Flag (CTF) sont des compétitions de hacking.\\Régulièrement top 50 compétitions mondiales, $10^e$ au challenge Brigitte Friang de la DGSE, $5^e$ au challenge DGHack 2021 de la DGA.\\\href{https://github.com/apoirrier/CTFs-writeups}{https://github.com/apoirrier/CTFs-writeups}.}
 \end{twentyshort}
 
 \end{document} 
