--- a/CVFR_POIRRIER_Alexandre.tex
+++ b/CVFR_POIRRIER_Alexandre.tex
@@ -68,7 +68,7 @@
 	\twentyitem{Avril 2019}{Août 2019}{\textbf{Chercheur stagiaire}, Cisco Systems}{Issy}{France}{Étude et optimisation de VPP, une stack réseau virtuelle écrite pour hardware non spécifiques.}
 	\twentyitem{Juin 2018}{Août 2018}{\textbf{Stagiaire Data scientist}, BeeBryte}{Singapour}{}{Conception d'un algorithme de trading pour optimiser la consommation énergétique de bâtiments commerciaux.\\ Apprentissage par renforcement de réseaux de neurones profonds pour optimiser l'algorithme.}
 	\twentyitem{Oct. 2017}{Mai 2018}{\textbf{Colleur} en classes préparatoires}{Sceaux}{France}{Interrogations orales pour préparer des élèves de PSI* au concours d'entrée aux grandes écoles.}
-	\twentyitem{Sep. 2016}{Mars 2017}{\textbf{Stagiaire ingénieur} au CMRRF de Kerpape}{Ploemeur}{France}{Animation d'un Fablab : apprentissage de la modélisation 3D à des patients handicapés moteurs, pour les aider à créer des aides techniques qui les aident à retrouver une certaine autonomie au quotidien.}
+	\twentyitem{Sep. 2016}{Mars 2017}{\textbf{Stagiaire ingénieur} au CMRRF de Kerpape}{Ploemeur}{France}{Animation d'un Fablab : apprentissage de la modélisation 3D à des patients handicapés moteurs, pour leur apprendre à créer des aides techniques leur permettant de retrouver une certaine autonomie au quotidien.}
 	%\twentyitem{<dates>}{<title>}{<location>}{<description>}
 \end{twenty}
 
@@ -77,7 +77,7 @@
 
 \begin{twenty} % Environment for a list with descriptions
 	\twentyitem{2019}{2021}{Master en informatique à ETH Zürich}{Zürich}{Suisse}{Mineure cybersécurité. GPA: 5.69/6.\\ Master thesis dans le groupe de Cryptographie Appliquée `Continuous authentication in Secure Messaging'.}
-	\twentyitem{2016}{2019}{Diplôme d'ingénieur à l'École polytechnique}{Palaiseau}{France}{GPA : 3.92/4, Classement : $44^e$. Mineure cybersécurité.}
+	\twentyitem{2016}{2019}{Diplôme d'ingénieur à l'École polytechnique}{Palaiseau}{France}{GPA : 3.92/4, Classement : 44\ieme. Mineure cybersécurité.}
 	\twentyitem{2013}{2016}{Classes préparatoires Lycée Henri IV}{Paris}{France}{MPSI/MP*, Option informatique}
 \end{twenty}
 
@@ -99,7 +99,7 @@
 \section{Intérêts}
 
 \begin{twentyshort} % Environment for a short list with no descriptions
-	\twentyitemshort{CTF}{Les Capture The Flag (CTF) sont des compétitions de hacking.\\Régulièrement top 50 compétitions mondiales, $10^e$ au challenge Brigitte Friang de la DGSE, $5^e$ au challenge DGHack 2021 de la DGA.\\\href{https://github.com/apoirrier/CTFs-writeups}{https://github.com/apoirrier/CTFs-writeups}.}
+	\twentyitemshort{CTF}{Les Capture The Flag (CTF) sont des compétitions de hacking.\\Régulièrement top 50 compétitions mondiales, 10\ieme{} au challenge Brigitte Friang de la DGSE, 5\ieme{} au challenge DGHack 2021 de la DGA.\\\href{https://github.com/apoirrier/CTFs-writeups}{https://github.com/apoirrier/CTFs-writeups}.}
 \end{twentyshort}
 
 \end{document} 
